--- a/HotelBooking/src/main/webapp/mycss.css
+++ b/HotelBooking/src/main/webapp/mycss.css
@@ -1,25 +1,25 @@
 @charset "BIG5";
 
+.body
+{
+	margin:0px;
+}
 /* 頂部導覽 */
 .topnavi
 {
-	overflow: hidden;
 	background: #339933;
-	position: fixed;
-	width: 100%;
-	z-index: 2;
+	position: relative;
+	padding: 3px
 }
 
 /* 頂部導覽鏈接 */
 .topnavi a
 {
-	float: left;
-	display: block;
+	display: inline-block;
 	color: #f2f2f2;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
-
 }
 
 /* 導覽變色 */
@@ -51,10 +51,10 @@
 
 /*搜尋欄對半*/
 #innerplaneA{
-	left:0; width:50%; height: 100%; position: absolute;
+	position: relative;
 }
 #innerplaneB{
-	left:50%; width:50%; height: 100%; position: absolute;
+	position: relative;
 }
 #innerplaneAA{
 	left:0; width:50%; position: absolute;
@@ -75,87 +75,59 @@
 	color: white;
 	font-size: 25px;
 	text-align: center;
-	position:absolute;
-	left: 0;
-	right: 0;
-	margin:0 auto;
-	top: 15%;
+	position: relative;
+	margin:3px auto;
 }
 
 /* 搜尋器 */
 .searching{
+    position: relative;
 	border: 2px solid #f2f2f2;
 	border-radius:8px;
 	background-color: #f2f2f2;
-	width: 75%;
-	height: 60%;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-	
-    position:absolute;
-    left:0;
-    top: 30px;
-    bottom: 0;
-    right: 0;
     margin: auto;
 	
 }
 
 /*房間數量*/
 div.searching .roomsize{
+	/*
 	padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  	float: left;
   	background-color: white;
-  	
-  	position: absolute;
+  	*/
   	height: 75%;
   	width: 80%;
-  	top: 50%;
-  	transform: translateY(-50%);
-  	margin-left: 15px;
+	margin: auto;
   	
 }
 /*星數*/
 div.searching .stars{
+  	position: relative;
 	padding: 12px;
-    border: none;
-  	float: left;
-  	background-color: none;
-  	
-  	position: absolute;
+    border: none;	
   	height: 25%;
   	width: 80%;
-  	top: 25%;
-  	transform: translateY(-50%);
-  	
+  	margin: auto;
 }
 
 /*日期*/
 /*--------------------------------------*/
 div.searching .indate{
-	padding: 12px;
+  	position: relative;
     border: none;
-  	float: left;
-  	background-color: none;
-  	
-  	position: absolute;
   	width: 80%;
   	top: 50%;
-  	transform: translateY(-50%);
+  	margin: auto;
 
 }
 div.searching .outdate{
 	padding: 12px;
     border: none;
-  	float: left;
-  	background-color: none;
-  	
-  	position: absolute;
   	width: 80%;
-  	top: 65%;
-  	transform: translateY(-50%);	
-
+  	margin: auto;	
 }
 
 div.searching.indate,div.searching.outdate label{
@@ -170,31 +142,23 @@ div.searching.indate,div.searching.outdate label{
 	
 .dateformat{
 	padding: 12px;
-    border: none;
-  	float: left;
-  	background-color: none;
-  	
-  	position: absolute;
-  	height: 25%;
-  	width: 60%;
-  	top: 25%;
-  	transform: translateY(-50%);
-  	right: 5%;	
+    border: none; 	
+  	position: relative;
 
 }
 .dateformat2{
-	padding: 12px;
+	/*padding: 12px;*/
     border: none;
   	float: left;
   	background-color: none;
   	
-	text-align:center;
+	/*text-align:center;*/
 	color:black;
 	left: 0;
 	right: 0;
 	top: 0;
 	bottom: 0;
-	margin: auto;
+	/*margin: auto;*/
 
 }
 
@@ -203,11 +167,6 @@ div.searching.indate,div.searching.outdate label{
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
-	margin-left: 5px;
-  	float: left;
-  	top: 50%;
-  	transform: translateY(-50%);
-  	
 }
 
 /*--------------------------------------*/
@@ -218,22 +177,26 @@ input[type=text]{
     border-radius: 4px;
     resize: vertical;
 	margin: 5px;
-  	margin-top: 5%;
+  	margin-top: 1%;
 }
 
 /*搜尋按鈕*/
 input[type=submit]{
+	position: relative;
 	padding: 15px;
 	background-color: green;
 	color: white;
 	border-radius: 6px;
-	width: 60%;
+	width: 80%;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-	
-	position: absolute;
-	left: 50%;
+	left: 10%;
 	bottom: 10%;
-  	transform: translateX(-50%);
+}
+
+.half-text-half-input
+{
+	display: inline-block;
+	
 }
 
 /*比例*/
@@ -245,18 +208,13 @@ input[type=submit]{
 
 /*搜尋結果頁*/
 .searchResult{
+    position:relative;
 	border: 2px solid #f2f2f2;
 	border-radius:8px;
 	background-color: #f2f2f2;
-	width: 75%;
+	width: 100%;
 	height: 90%;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-	
-    position:absolute;
-    left:0;
-    top: 60px;
-    bottom: 0;
-    right: 0;
     margin: auto;
 	
 }
@@ -319,7 +277,7 @@ input[type=submit].chosed{
   	/*width: 60%;
 	right: 50%;
 	margin-top: 20px;*/
-	height: 50px;
+	height: 60px;
 	display: block;
 
 }
@@ -348,11 +306,7 @@ input[type=submit].chosed{
 	height: 300px;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 	
-    position:absolute;
-    left:0;
-    top: 0;
-    bottom:0;
-    right: 0;
+    position:relative;
     margin: auto;
     display: block;
 	
@@ -366,7 +320,7 @@ input[type=submit].chosed{
 	    height: 50%;
 	  }
  
-	.searching{height: 105%; transform: translateY(50%); width: 101%}
+	.searching{height: 105%;}
 	
 	#innerplaneA{
 		top: 0;
